[#703] text field and submit button are no longer covered by this weird dark box.
Also, took out autofocus because user needs to see how many invites they have left before sending an invitation.

Added extra margin to the bottom so you can see the submit button - no longer covered by the mini-player.

--- a/client/views/referral/ed-referral-view.less
+++ b/client/views/referral/ed-referral-view.less
@@ -8,7 +8,7 @@
 
 #referral-wrapper {
   background-color: @darkPurple2;
-  height: 100%;
+  min-height: 100%;
   margin: 0 auto;
   max-width: 59.6rem;
   overflow: hidden;
@@ -40,7 +40,7 @@
     padding: 0 7rem;
     .edPrimaryButton();
     bottom: 0;
-    margin: 3% auto 0 auto;
+    margin: 3% auto 16%;
   }
   ed-form-input {
     bottom: 0;
